--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -115,6 +115,8 @@
         padding: 0 30px 30px
         &::after, &::before
           display: none
+      &__text
+        max-height: 133px
       &__button
         top: 32px
         &--prev
@@ -149,6 +151,12 @@
   .subscribe
     width: 100%
   .reviews
+    padding-bottom: 40px
     &-title
+      margin-top: 0
+      margin-bottom: 40px
       font-size: 18px
       line-height: 23px
+    &-slider
+      &__text
+        max-height: 266px
