--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -1,7 +1,16 @@
 .newsletter
   position: relative
   padding: 98px 0 87px 0
-  background-color: rgba($dark, 0.8)
+  &::before
+    content: ''
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    width: 100%
+    height: 100%
+    background-color: rgba($dark, 0.8)
   &-wrapper
     position: relative
     max-width: 731px
@@ -42,7 +51,7 @@
     position: absolute
     top: 0
     right: 0
-    min-width: 65px
+    width: 65px
     height: 100%
     background-color: $primary
     font-style: normal
@@ -51,3 +60,6 @@
     line-height: 15px
     border: none
     color: $light
+    overflow: hidden
+    white-space: nowrap
+    text-overflow: ellipsis
