--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -88,9 +88,10 @@
       align-items: center
     &__text
       max-width: 537px
+      max-height: 114px
       margin: auto
       font-style: normal
       font-weight: normal
       font-size: 12px
       line-height: 160%
-      text-align: justify
+      overflow: auto
